// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bare DOM Snapshot 1`] = `
<div>
  <div
    className="slds-p-vertical_medium"
  >
    <h3
      className="slds-text-heading_small"
    >
      Static Examples
    </h3>
  </div>
  <div
    className="slds-grid slds-grid_vertical-align-start"
  >
    <div
      className="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        className="slds-listbox slds-listbox_horizontal slds-listbox_inline"
        role="listbox"
      >
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            aria-selected="true"
            className="slds-pill slds-pill_bare"
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            aria-selected="true"
            className="slds-pill slds-pill_bare"
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Bare HTML Snapshot 1`] = `
"<div>
  <div class=\\"slds-p-vertical_medium\\">
    <h3 class=\\"slds-text-heading_small\\">Static Examples</h3>
  </div>
  <div class=\\"slds-grid slds-grid_vertical-align-start\\">
    <div class=\\"slds-pill_container\\">
      <ul class=\\"slds-listbox slds-listbox_horizontal slds-listbox_inline\\" role=\\"listbox\\" aria-label=\\"Selected Options:\\" aria-orientation=\\"horizontal\\">
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" aria-selected=\\"true\\" role=\\"option\\" class=\\"slds-pill slds-pill_bare\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\"
            role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
          </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" aria-selected=\\"true\\" role=\\"option\\" class=\\"slds-pill slds-pill_bare\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\"
            role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Icon, Avatar, Error DOM Snapshot 1`] = `
<div
  className="slds-grid slds-grid_pull-padded-medium"
>
  <div
    className="slds-p-horizontal_medium"
  >
    <span
      className="slds-pill slds-pill_link"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="slds-pill__icon_container"
      >
        <span
          className="slds-icon_container slds-icon-standard-account"
          title="Account"
        >
          <svg
            aria-hidden="true"
            className="slds-icon"
          >
            <use
              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
            />
          </svg>
          
        </span>
      </span>
      <a
        className="slds-pill__action"
        href="javascript:void(0);"
        onClick={[Function]}
        title="Full pill label verbiage mirrored here"
      >
        <span
          className="slds-pill__label"
        >
          Pill Label
        </span>
      </a>
      <span
        className="slds-icon_container slds-pill__remove"
        onClick={[Function]}
        role="button"
        title="Remove"
      >
        <svg
          className="slds-icon slds-icon--x-small slds-icon-text-default"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Remove
        </span>
      </span>
    </span>
  </div>
  <div
    className="slds-p-horizontal_medium"
  >
    <span
      className="slds-pill slds-pill_link"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="slds-pill__icon_container"
      >
        <div>
          <span
            className="slds-avatar slds-avatar_circle slds-avatar_medium"
          >
            <img
              alt=""
              onError={[Function]}
              src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
              title="User avatar"
            />
          </span>
        </div>
      </span>
      <a
        className="slds-pill__action"
        href="javascript:void(0);"
        onClick={[Function]}
        title="Full pill label verbiage mirrored here"
      >
        <span
          className="slds-pill__label"
        >
          Pill Label
        </span>
      </a>
      <span
        className="slds-icon_container slds-pill__remove"
        onClick={[Function]}
        role="button"
        title="Remove"
      >
        <svg
          className="slds-icon slds-icon--x-small slds-icon-text-default"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Remove
        </span>
      </span>
    </span>
  </div>
  <div
    className="slds-p-horizontal_medium"
  >
    <span
      className="slds-pill slds-pill_link slds-has-error"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="slds-pill__icon_container"
      >
        <span
          title="Error"
        >
          <svg
            aria-hidden="true"
            className="slds-icon-text-error slds-icon slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#warning"
            />
          </svg>
          
        </span>
      </span>
      <a
        className="slds-pill__action"
        href="javascript:void(0);"
        onClick={[Function]}
        title="Full pill label verbiage mirrored here"
      >
        <span
          className="slds-pill__label"
        >
          Pill Label
        </span>
      </a>
      <span
        className="slds-icon_container slds-pill__remove"
        onClick={[Function]}
        role="button"
        title="Remove"
      >
        <svg
          className="slds-icon slds-icon--x-small slds-icon-text-default"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Remove
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Icon, Avatar, Error HTML Snapshot 1`] = `
"<div class=\\"slds-grid slds-grid_pull-padded-medium\\">
  <div class=\\"slds-p-horizontal_medium\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-account\\" title=\\"Account\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#account\\"></use></svg></span></span>
    <a
      href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
      </span>
  </div>
  <div class=\\"slds-p-horizontal_medium\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><span class=\\"slds-pill__icon_container\\"><div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><img alt=\\"\\" src=\\"https://lightningdesignsystem.com/assets/images/avatar2.jpg\\" title=\\"User avatar\\"/></span></div>
  </span><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
  </span>
</div>
<div class=\\"slds-p-horizontal_medium\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link slds-has-error\\"><span class=\\"slds-pill__icon_container\\"><span title=\\"Error\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon-text-error slds-icon slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#warning\\"></use></svg></span></span>
  <a
    href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
    </span>
</div>
</div>"
`;

exports[`Linked, Unlinked, Truncated DOM Snapshot 1`] = `
<div
  className="slds-grid slds-grid_pull-padded-medium"
>
  <div
    className="slds-p-horizontal_medium"
  >
    <span
      className="slds-pill slds-pill_link"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
    >
      <a
        className="slds-pill__action"
        href="javascript:void(0);"
        onClick={[Function]}
        title="Full pill label verbiage mirrored here"
      >
        <span
          className="slds-pill__label"
        >
          Pill Label
        </span>
      </a>
      <span
        className="slds-icon_container slds-pill__remove"
        onClick={[Function]}
        role="button"
        title="Remove"
      >
        <svg
          className="slds-icon slds-icon--x-small slds-icon-text-default"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Remove
        </span>
      </span>
    </span>
  </div>
  <div
    className="slds-p-horizontal_medium"
  >
    <span
      className="slds-pill slds-pill_link"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
    >
      <a
        className="slds-pill__action"
        href="javascript:void(0);"
        title="Full pill label verbiage mirrored here"
      >
        <span
          className="slds-pill__label"
        >
          Pill Label
        </span>
      </a>
      <span
        className="slds-icon_container slds-pill__remove"
        onClick={[Function]}
        role="button"
        title="Remove"
      >
        <svg
          className="slds-icon slds-icon--x-small slds-icon-text-default"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Remove
        </span>
      </span>
    </span>
  </div>
  <div
    className="slds-p-horizontal_medium"
  >
    <div
      style={
        Object {
          "position": "relative",
          "width": "220px",
        }
      }
    >
      <div
        className="slds-pill_container"
      >
        <span
          className="slds-pill slds-pill_link"
          onClick={null}
          onKeyDown={[Function]}
          role="button"
        >
          <a
            className="slds-pill__action"
            href="javascript:void(0);"
            onClick={[Function]}
            title="Pill label that is longer than the area that contains it"
          >
            <span
              className="slds-pill__label"
            >
              Pill label that is longer than the area that contains it
            </span>
          </a>
          <span
            className="slds-icon_container slds-pill__remove"
            onClick={[Function]}
            role="button"
            title="Remove"
          >
            <svg
              className="slds-icon slds-icon--x-small slds-icon-text-default"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Remove
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Linked, Unlinked, Truncated HTML Snapshot 1`] = `
"<div class=\\"slds-grid slds-grid_pull-padded-medium\\">
  <div class=\\"slds-p-horizontal_medium\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\"
      title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
    </span>
  </div>
  <div class=\\"slds-p-horizontal_medium\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\"
      title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
    </span>
  </div>
  <div class=\\"slds-p-horizontal_medium\\">
    <div style=\\"width:220px;position:relative;\\">
      <div class=\\"slds-pill_container\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Pill label that is longer than the area that contains it\\"><span class=\\"slds-pill__label\\">Pill label that is longer than the area that contains it</span></a>
        <span
          class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
          </span>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Listbox Of Pill Options DOM Snapshot 1`] = `
<div>
  <div
    className="slds-p-vertical_medium"
  >
    <h3
      className="slds-text-heading_small"
    >
      Static Examples
    </h3>
  </div>
  <div
    className="slds-grid slds-grid_vertical-align-start"
  >
    <div
      className="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        className="slds-listbox slds-listbox_horizontal slds-listbox_inline"
        role="listbox"
      >
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Listbox Of Pill Options HTML Snapshot 1`] = `
"<div>
  <div class=\\"slds-p-vertical_medium\\">
    <h3 class=\\"slds-text-heading_small\\">Static Examples</h3>
  </div>
  <div class=\\"slds-grid slds-grid_vertical-align-start\\">
    <div class=\\"slds-pill_container\\">
      <ul class=\\"slds-listbox slds-listbox_horizontal slds-listbox_inline\\" role=\\"listbox\\" aria-label=\\"Selected Options:\\" aria-orientation=\\"horizontal\\">
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
          </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Listbox Of Pill Options With Avatar DOM Snapshot 1`] = `
<div>
  <div
    className="slds-p-vertical_medium"
  >
    <h3
      className="slds-text-heading_small"
    >
      Static Examples
    </h3>
  </div>
  <div
    className="slds-grid slds-grid_vertical-align-start"
  >
    <div
      className="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        className="slds-listbox slds-listbox_horizontal slds-listbox_inline"
        role="listbox"
      >
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__icon_container"
            >
              <div>
                <span
                  className="slds-avatar slds-avatar_circle slds-avatar_medium"
                >
                  <img
                    alt=""
                    onError={[Function]}
                    src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
                    title="User avatar"
                  />
                </span>
              </div>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <span
              className="slds-pill__icon_container"
            >
              <div>
                <span
                  className="slds-avatar slds-avatar_circle slds-avatar_medium"
                >
                  <img
                    alt=""
                    onError={[Function]}
                    src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
                    title="User avatar"
                  />
                </span>
              </div>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Listbox Of Pill Options With Avatar HTML Snapshot 1`] = `
"<div>
  <div class=\\"slds-p-vertical_medium\\">
    <h3 class=\\"slds-text-heading_small\\">Static Examples</h3>
  </div>
  <div class=\\"slds-grid slds-grid_vertical-align-start\\">
    <div class=\\"slds-pill_container\\">
      <ul class=\\"slds-listbox slds-listbox_horizontal slds-listbox_inline\\" role=\\"listbox\\" aria-label=\\"Selected Options:\\" aria-orientation=\\"horizontal\\">
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><img alt=\\"\\" src=\\"https://lightningdesignsystem.com/assets/images/avatar2.jpg\\" title=\\"User avatar\\"/></span></div>
    </span><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
    </span>
    </li>
    <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span tabindex=\\"0\\" role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><img alt=\\"\\" src=\\"https://lightningdesignsystem.com/assets/images/avatar2.jpg\\" title=\\"User avatar\\"/></span></div>
  </span><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
  </span>
  </li>
  </ul>
</div>
</div>
</div>"
`;

exports[`Listbox Of Pill Options With Icon DOM Snapshot 1`] = `
<div>
  <div
    className="slds-grid slds-grid_vertical-align-start"
  >
    <div
      className="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        className="slds-listbox slds-listbox_horizontal slds-listbox_inline"
        role="listbox"
      >
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-case"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#case"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon-text-default"
                >
                  <use
                    xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#retweet"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-solution"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#solution"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-custom-notification"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#custom_notification"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-email"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#email"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-endorsement"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#endorsement"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-standard-recent"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#recent"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
        <li
          className="slds-listbox-item"
          role="presentation"
        >
          <span
            className="slds-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <span
              className="slds-pill__icon_container"
            >
              <span
                className="slds-icon_container slds-icon-custom-custom31"
                title="Title"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/custom-sprite/svg/symbols.svg#custom31"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-pill__label"
              title="Full pill label verbiage mirrored here"
            >
              Pill Label
            </span>
            <span
              className="slds-icon_container slds-pill__remove"
              onClick={[Function]}
              role="button"
              title="Remove"
            >
              <svg
                className="slds-icon slds-icon--x-small slds-icon-text-default"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Press delete or backspace to remove
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Listbox Of Pill Options With Icon HTML Snapshot 1`] = `
"<div>
  <div class=\\"slds-grid slds-grid_vertical-align-start\\">
    <div class=\\"slds-pill_container\\">
      <ul class=\\"slds-listbox slds-listbox_horizontal slds-listbox_inline\\" role=\\"listbox\\" aria-label=\\"Selected Options:\\" aria-orientation=\\"horizontal\\">
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-account\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#account\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-case\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#case\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#retweet\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-solution\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#solution\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-custom-notification\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#custom_notification\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-email\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#email\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-endorsement\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#endorsement\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-standard-recent\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#recent\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
        <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__icon_container\\"><span class=\\"slds-icon_container slds-icon-custom-custom31\\" title=\\"Title\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/custom-sprite/svg/symbols.svg#custom31\\"></use></svg></span></span>
          <span
            class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span><span class=\\"slds-icon_container slds-pill__remove\\" title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Press delete or backspace to remove</span></span>
            </span>
        </li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Pill Container DOM Snapshot 1`] = `
<div>
  <div
    className="slds-p-vertical_medium"
  >
    <h3
      className="slds-text-heading_small"
    >
      Static Examples
    </h3>
  </div>
  <div
    className="slds-grid slds-grid_vertical-align-start slds-p-horizontal_xx-small"
  >
    <div
      className="slds-p-horizontal_xx-small"
    >
      <div
        className="slds-pill_container"
      >
        <span
          className="slds-pill slds-pill_link"
          onClick={null}
          onKeyDown={[Function]}
          role="button"
        >
          <a
            className="slds-pill__action"
            href="javascript:void(0);"
            onClick={[Function]}
            title="Full pill label verbiage mirrored here"
          >
            <span
              className="slds-pill__label"
            >
              Pill Label
            </span>
          </a>
          <span
            className="slds-icon_container slds-pill__remove"
            onClick={[Function]}
            role="button"
            title="Remove"
          >
            <svg
              className="slds-icon slds-icon--x-small slds-icon-text-default"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Remove
            </span>
          </span>
        </span>
        <span
          className="slds-pill slds-pill_link"
          onClick={null}
          onKeyDown={[Function]}
          role="button"
        >
          <a
            className="slds-pill__action"
            href="javascript:void(0);"
            onClick={[Function]}
            title="Full pill label verbiage mirrored here"
          >
            <span
              className="slds-pill__label"
            >
              Pill Label
            </span>
          </a>
          <span
            className="slds-icon_container slds-pill__remove"
            onClick={[Function]}
            role="button"
            title="Remove"
          >
            <svg
              className="slds-icon slds-icon--x-small slds-icon-text-default"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Remove
            </span>
          </span>
        </span>
        <span
          className="slds-pill slds-pill_link"
          onClick={null}
          onKeyDown={[Function]}
          role="button"
        >
          <a
            className="slds-pill__action"
            href="javascript:void(0);"
            onClick={[Function]}
            title="Full pill label verbiage mirrored here"
          >
            <span
              className="slds-pill__label"
            >
              Pill Label
            </span>
          </a>
          <span
            className="slds-icon_container slds-pill__remove"
            onClick={[Function]}
            role="button"
            title="Remove"
          >
            <svg
              className="slds-icon slds-icon--x-small slds-icon-text-default"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Remove
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      className="slds-p-horizontal_medium"
    >
      <div
        className="slds-pill_container"
      >
        <ul
          aria-label="Selected Options:"
          aria-orientation="horizontal"
          className="slds-listbox slds-listbox_horizontal slds-listbox_inline"
          role="listbox"
        >
          <li
            className="slds-listbox-item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onKeyDown={null}
              role="option"
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label
              </span>
            </span>
          </li>
          <li
            className="slds-listbox-item"
            role="presentation"
          >
            <span
              className="slds-pill"
              onKeyDown={null}
              role="option"
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pill Container HTML Snapshot 1`] = `
"<div>
  <div class=\\"slds-p-vertical_medium\\">
    <h3 class=\\"slds-text-heading_small\\">Static Examples</h3>
  </div>
  <div class=\\"slds-grid slds-grid_vertical-align-start slds-p-horizontal_xx-small\\">
    <div class=\\"slds-p-horizontal_xx-small\\">
      <div class=\\"slds-pill_container\\"><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\"
          title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
        </span><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\"
          title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
        </span><span role=\\"button\\" class=\\"slds-pill slds-pill_link\\"><a href=\\"javascript:void(0);\\" class=\\"slds-pill__action\\" title=\\"Full pill label verbiage mirrored here\\"><span class=\\"slds-pill__label\\">Pill Label</span></a><span class=\\"slds-icon_container slds-pill__remove\\"
          title=\\"Remove\\" role=\\"button\\"><svg style=\\"cursor:pointer;\\" class=\\"slds-icon slds-icon--x-small slds-icon-text-default\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove</span></span>
        </span>
      </div>
    </div>
    <div class=\\"slds-p-horizontal_medium\\">
      <div class=\\"slds-pill_container\\">
        <ul class=\\"slds-listbox slds-listbox_horizontal slds-listbox_inline\\" role=\\"listbox\\" aria-label=\\"Selected Options:\\" aria-orientation=\\"horizontal\\">
          <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span aria-selected=\\"true\\" role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span></span>
          </li>
          <li class=\\"slds-listbox-item\\" role=\\"presentation\\"><span role=\\"option\\" class=\\"slds-pill\\"><span class=\\"slds-pill__label\\" title=\\"Full pill label verbiage mirrored here\\">Pill Label</span></span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;
